--- a/public/assets/css/base.css
+++ b/public/assets/css/base.css
@@ -72,7 +72,7 @@
     }
 }
 
-body {
+body, :host * {
     margin: 0;
     font-family: var(--bs-body-font-family);
     font-size: var(--bs-body-font-size);
