--- a/public/assets/css/bootstrap.css
+++ b/public/assets/css/bootstrap.css
@@ -71,7 +71,7 @@
   }
 }
 
-:host *, body {
+body {
   margin: 0;
   font-family: var(--bs-body-font-family);
   font-size: var(--bs-body-font-size);
